deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yuledkcs
  labels:
    name: yuledkcs
    app.kubernetes.io/name: yuledkcs
    app.kubernetes.io/component: namespace
